name: gf-erc
version: 3.6-darcs

cabal-version: >= 1.10
build-type: Simple
license: OtherLicense
license-file: LICENSE
category: Natural Language Processing, Compiler
synopsis: Grammatical Framework
description: GF, Grammatical Framework, is a programming language for multilingual grammar applications
homepage: http://www.grammaticalframework.org/
bug-reports: http://code.google.com/p/grammatical-framework/issues/list
maintainer: Thomas Hallgren
tested-with: GHC==7.4.2, GHC==7.6.3

data-dir: src
data-files: www/*.html
	    www/P/*.png
	    www/gfse/*.html
	    www/gfse/*.css
	    www/gfse/*.js
	    www/gfse/P/*.png
	    www/gfse/P/*.jpg
            www/js/*.js
	    www/minibar/*.html
	    www/minibar/*.css
	    www/minibar/*.js
	    www/minibar/*.png
	    www/syntax-editor/*.html
	    www/syntax-editor/*.css
	    www/syntax-editor/*.js
	    www/TransQuiz/*.html
	    www/TransQuiz/*.css
	    www/TransQuiz/*.js
	    www/TransQuiz/*.png
	    www/translator/*.html
	    www/translator/*.css
	    www/translator/*.js

source-repository head
  type:     darcs
  location: http://www.grammaticalframework.org/


flag interrupt
  Description: Enable Ctrl+Break in the shell
  Default:     True

flag server
  Description: Include --server mode
  Default:     True

--flag new-comp
--  Description: Make -new-comp the default
--  Default:     True

flag custom-binary
  Description: Use a customised version of the binary package
  Default:     True

flag c-runtime
  Description: Include functionality from the C run-time library (which must be installed already)
  Default:     False

Library
  default-language:    Haskell2010
  build-depends: base >= 4.3 && <5,
                 array,
                 fst,
                 containers,
                 bytestring,
                 utf8-string,
                 random,
                 pretty,
                 mtl
  hs-source-dirs: src/runtime/haskell

  hs-source-dirs: src/binary
  exposed-modules:
      -- not really part of GF but I have changed the original binary library
      -- and we have to keep the copy for now.
      Data.Binary
      Data.Binary.Put
      Data.Binary.Get
      Data.Binary.Builder
      Data.Binary.IEEE754

  ghc-options: -fwarn-unused-imports
  if impl(ghc>=7.8)
    ghc-options: +RTS -A20M -RTS
  ghc-prof-options: -fprof-auto
  extensions: 

  exposed-modules: 
    PGF
    PGF.Internal
    PGF.Lexing
    PGF.Utilities
    PGF.Data
    PGF.Macros
    PGF.Binary
    PGF.Optimize
    PGF.Printer
    PGF.CId
    PGF.Expr
    PGF.Generate
    PGF.Linearize
    PGF.Morphology
    PGF.Paraphrase
    PGF.Parse
    PGF.Probabilistic
    PGF.SortTop
    PGF.Tree
    PGF.Type
    PGF.Tokenizer
    PGF.TypeCheck
    PGF.Forest
    PGF.TrieMap
    PGF.VisualizeTree
    PGF.ByteCode
    PGF.OldBinary

  if flag(c-runtime)
    exposed-modules:     PGF2
    other-modules:       PGF2.FFI
    hs-source-dirs:      src/runtime/haskell-bind
    build-tools:         hsc2hs
    extra-libraries:     gu pgf
    cc-options:          -std=c99
